<?xml version="1.0" encoding="utf-8"?><FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".Fragment.QuenMKFragment">    <androidx.constraintlayout.widget.ConstraintLayout        android:layout_width="match_parent"        android:layout_height="match_parent">        <ImageView            android:id="@+id/imageViewQMK"            app:layout_constraintBottom_toTopOf="@+id/textView3"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/txtEmailNar"            android:layout_width="0dp"            android:layout_height="0dp"            android:contentDescription="TODO"            android:src="@mipmap/quenmk" />        <TextView            android:id="@+id/txtEmailNar"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginTop="16dp"            android:text="@string/quen_mat_khau"            android:textAllCaps="false"            android:textColor="@color/colorTieuDe"            android:textSize="36sp"            android:textStyle="bold" />        <TextView            android:id="@+id/textView3"            app:layout_constraintBottom_toTopOf="@+id/guideline11"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="32dp"            android:layout_marginLeft="32dp"            android:layout_marginEnd="32dp"            android:layout_marginRight="32dp"            android:gravity="center"            android:text="@string/nhap_email_layMK"            android:textColor="@color/colorPrimary"            android:textSize="24sp"            android:textStyle="bold" />        <TextView            android:id="@+id/textView4"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="32dp"            android:layout_marginLeft="32dp"            android:layout_marginEnd="32dp"            android:layout_marginRight="32dp"            android:gravity="center"            android:text="@string/khong_co_email"            android:textSize="18sp"            app:layout_constraintBottom_toTopOf="@+id/guideline12"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintHorizontal_bias="0.0"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="@+id/guideline9" />        <EditText            android:id="@+id/edtQuenMk"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="@+id/guideline11"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="16dp"            android:layout_marginLeft="16dp"            android:layout_marginTop="16dp"            android:layout_marginEnd="16dp"            android:layout_marginRight="16dp"            android:backgroundTint="@color/colorPrimary"            android:ems="10"            android:hint="@string/nhap_Email_o_day"            android:theme="@style/ColorProgressBar"            android:inputType="textPersonName"            android:textColor="@color/colorPrimary"            tools:targetApi="lollipop" />        <androidx.constraintlayout.widget.Guideline            android:id="@+id/guideline11"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="horizontal"            app:layout_constraintGuide_percent="0.5" />        <Button            android:id="@+id/btnXacNhanLayMK"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="16dp"            android:layout_marginLeft="16dp"            android:layout_marginEnd="16dp"            android:layout_marginRight="16dp"            android:backgroundTint="@color/colorPrimaryDark"            android:enabled="false"            android:text="@string/Lay_MK"            android:textColor="@color/colorVoHieuHoa"            android:textSize="20sp"            app:layout_constraintBottom_toTopOf="@+id/guideline9"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintHorizontal_bias="0.0"            app:layout_constraintStart_toStartOf="parent" />        <androidx.constraintlayout.widget.Guideline            android:id="@+id/guideline12"            app:layout_constraintGuide_percent="0.9"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="horizontal" />        <TextView            android:id="@+id/txtQuayLai"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="@+id/guideline12"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/tro_Lai"            android:textColor="@color/colorPrimary"            android:textSize="18sp"            android:textStyle="bold" />        <LinearLayout            android:id="@+id/layMK_Email_Container"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginTop="8dp"            android:layout_marginBottom="16dp"            android:orientation="horizontal"            app:layout_constraintBottom_toTopOf="@+id/btnXacNhanLayMK"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/edtQuenMk">            <ImageView                android:id="@+id/layMK_Icon"                android:layout_width="25dp"                android:layout_height="25dp"                android:layout_gravity="center"                android:src="@mipmap/gmail"                android:visibility="gone" />            <TextView                android:id="@+id/txtLayMK_email"                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_weight="1"                android:gravity="center"                android:text="@string/lay_MK_ThanhCong"                android:textColor="@color/colorHoanTat"                android:visibility="gone" />        </LinearLayout>        <androidx.constraintlayout.widget.Guideline            android:id="@+id/guideline9"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="horizontal"            app:layout_constraintGuide_percent="0.73" />        <ProgressBar            android:id="@+id/progressbarLayMK"            style="?android:attr/progressBarStyleHorizontal"            android:layout_width="100dp"            android:layout_height="0dp"            android:indeterminate="true"            android:theme="@style/ColorProgressBar"            android:visibility="gone"            app:layout_constraintEnd_toEndOf="@+id/layMK_Email_Container"            app:layout_constraintHorizontal_bias="0.498"            app:layout_constraintStart_toStartOf="@+id/layMK_Email_Container"            app:layout_constraintTop_toBottomOf="@+id/layMK_Email_Container" />    </androidx.constraintlayout.widget.ConstraintLayout></FrameLayout>