<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="@dimen/nav_header_height"    android:background="@color/colorPrimary"    android:gravity="bottom"    android:orientation="vertical"    android:paddingLeft="@dimen/activity_horizontal_margin"    android:paddingTop="@dimen/activity_vertical_margin"    android:paddingRight="@dimen/activity_horizontal_margin"    android:paddingBottom="@dimen/activity_vertical_margin"    android:theme="@style/ThemeOverlay.AppCompat.Dark">    <ImageView        android:id="@+id/image_Add_AvartarNar"        android:layout_width="25dp"        android:layout_height="25dp"        android:elevation="5dp"        app:layout_constraintBottom_toBottomOf="@+id/image_AvatarNar"        app:layout_constraintEnd_toEndOf="@+id/image_AvatarNar"        app:srcCompat="@mipmap/add" />    <ImageView        android:id="@+id/image_AvatarNar"        android:layout_width="0dp"        android:layout_height="0dp"        android:contentDescription="@string/nav_header_desc"        android:elevation="3dp"        app:layout_constraintBottom_toTopOf="@+id/guideline10"        app:layout_constraintEnd_toStartOf="@+id/guideline13"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="1.0"        app:srcCompat="@mipmap/babymilo" />    <TextView        android:id="@+id/txtTaiKhoanNar"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:paddingTop="@dimen/nav_header_vertical_spacing"        android:text="@string/chua_dang_nhap"        android:textAppearance="@style/TextAppearance.AppCompat.Body1"        android:textSize="18sp"        android:textStyle="bold"        app:layout_constraintBottom_toTopOf="@+id/txtEmailNar"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/image_AvatarNar" />    <TextView        android:id="@+id/txtEmailNar"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:layout_marginBottom="8dp"        android:text="@string/dia_chi_Email"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/txtTaiKhoanNar" />    <androidx.constraintlayout.widget.Guideline        android:id="@+id/guideline10"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:orientation="horizontal"        app:layout_constraintGuide_percent="0.5" />    <androidx.constraintlayout.widget.Guideline        android:id="@+id/guideline13"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:orientation="vertical"        app:layout_constraintGuide_percent="0.2" /></androidx.constraintlayout.widget.ConstraintLayout>